src/snapshots/alma__infer__tests__test_infer_module__introduced_bindings_type_in_pattern_matching.snap
---
source: src/infer.rs
assertion_line: 3828
expression: "infer(\"\\\nmodule Test exposing (test)\n\ntype Option a = Some a | None \n\ntest = when Some (Some 1) is\n    Some a | Some (Some a) -> a\n\")"
---
Input:

module Test exposing (test)

type Option a = Some a | None 

test = when Some (Some 1) is
    Some a | Some (Some a) -> a


---
Output:

Test.alma [6:9]

Type mismatch:  Option Float  ≠  Float

Expected

  4│  
  5│  test = when Some (Some 1) is
  6│      Some a | Some (Some a) -> a
   │           ↑

with type

    Option Float

to have the same type as

  4│  
  5│  test = when Some (Some 1) is
  6│      Some a | Some (Some a) -> a
   │                          ↑

with type

    Float
