src/snapshots/alma__infer__tests__test_infer_module__pattern_matching_constructor_types_wrong_arity-2.snap
---
source: src/infer.rs
assertion_line: 3522
expression: "infer(\"\\\nmodule Test exposing (test)\n\ntype Test a = X a | Y\n\ntest = when X 1 is\n    X a b -> a + b\n\")"
---
Input:

module Test exposing (test)

type Test a = X a | Y

test = when X 1 is
    X a b -> a + b


---
Output:

Test.alma [6:4]

Type `Float -> Test Float` accepts 1 parameter but it was called with 2.

  4│  
  5│  test = when X 1 is
  6│      X a b -> a + b
   │      ↑
