src/snapshots/alma__infer__tests__test_infer_module__pattern_matching_constructor_types_wrong_arity-4.snap
---
source: src/infer.rs
assertion_line: 3727
expression: "infer(\"\\\nmodule Test exposing (test)\n\ntype Test a = X a | Y\n\ntest = when X 1 is\n    Y a -> a\n\")"
---
Input:

module Test exposing (test)

type Test a = X a | Y

test = when X 1 is
    Y a -> a


---
Output:

Test.alma [6:4]

Type mismatch:  Test Float -> Test Float  ≠  Test a

Expected

  4│  
  5│  test = when X 1 is
  6│      Y a -> a
   │      ↑

to be

    Test a

but seems to be

    Test Float -> Test Float
