src/snapshots/alma__infer__tests__test_infer_module__pattern_matching_constructor_types_wrong_arity-5.snap
---
source: src/infer.rs
assertion_line: 3488
expression: "infer(\"\\\nmodule Test exposing (test)\n\ntype Test a = X a | Y\n\ntest = when X 1 is\n    Y -> True\n\")"
---
Input:

module Test exposing (test)

type Test a = X a | Y

test = when X 1 is
    Y -> True


---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

test : ∀ ∅ . Bool
