src/snapshots/alma__infer__tests__test_infer_module__pattern_matching_constructor_types_wrong_arity.snap
---
source: src/infer.rs
assertion_line: 3448
expression: "infer(\"\\\nmodule Test exposing (test)\n\ntype Test a = X a | Y\n\ntest = when X 1 is\n    X -> True\n\")"
---
Input:

module Test exposing (test)

type Test a = X a | Y

test = when X 1 is
    X -> True


---
Output:

Test.alma [6:4]

Type `a -> Test a` accepts 1 parameter but it was called with 0.

  4│  
  5│  test = when X 1 is
  6│      X -> True
   │      ↑
