src/snapshots/alma__infer__tests__test_infer_module__qualified_constructor_in_pattern_matching.snap
---
source: src/infer.rs
assertion_line: 3575
expression: "infer(\"\\\nmodule Test exposing (main)\n\nimport Test.Types\n\nmodule Test.Types exposing (Test(Test))\n    type Test a = Test a\n\nTest.Types.Test a = Test.Types.Test 1\n\ntest = when Test.Types.Test 2 is\n    Test.Types.Test a -> a\n\nmain = a + test\n\")"
---
Input:

module Test exposing (main)

import Test.Types

module Test.Types exposing (Test(Test))
    type Test a = Test a

Test.Types.Test a = Test.Types.Test 1

test = when Test.Types.Test 2 is
    Test.Types.Test a -> a

main = a + test


---
Output:

module Alma



False : ∀ ∅ . Bool

True : ∀ ∅ . Bool



add : ∀ ∅ . Float -> Float -> Float

and_ : ∀ ∅ . Bool -> Bool -> Bool

div : ∀ ∅ . Float -> Float -> Float

eq : ∀ a . a -> a -> Bool

ge : ∀ ∅ . Float -> Float -> Bool

gt : ∀ ∅ . Float -> Float -> Bool

le : ∀ ∅ . Float -> Float -> Bool

lt : ∀ ∅ . Float -> Float -> Bool

mult : ∀ ∅ . Float -> Float -> Float

ne : ∀ a . a -> a -> Bool

or_ : ∀ ∅ . Bool -> Bool -> Bool

sub : ∀ ∅ . Float -> Float -> Float


module Test

main : ∀ ∅ . Float


module Test.Types

Test : ∀ a . a -> Test a


